tests/NormalTests/paczka1/fuzzy1/91838333.err
Error in line 6: nVKF6 A787 77,2
Error in line 7: nVKF6 S318 82,3
Error in line 16: dtpn S318 49,5
Error in line 23: Znz A157 85,7
Error in line 15: DMl S270 163,8
Error in line 30: dtpn A787 50,2
Error in line 37: dtpn A157 32,43
